--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -1,6 +1,13 @@
   .size-grid-standard {
-    height: 500px;
+    height: auto;
+    max-height: 500px;
+    margin-bottom: 10px;
+    margin-right:auto ;
+    width: auto;
   }
   .size-grid-auto {
+    width: 100%;
     height: auto;
+    max-height: 500px;
+    margin: 10px;
   }
