Preliminär design, ska lösa koppling till api:et

--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -11,3 +11,7 @@
     max-height: 500px;
     margin: 10px;
   }
+
+//main background color #ffffff
+//Link color #1E45A1
+//Secondary background color #CBD7FB
