--- a/src/styles/site.scss
+++ b/src/styles/site.scss
@@ -12,6 +12,12 @@
     margin: 10px;
   }
 
+
+//Fsd färgerna blå #014B94
+//Orange #D69996
+// Vit #E6EFF6
+
+
 //main background color #ffffff
 //Link color #1E45A1
 //Secondary background color #CBD7FB
